--- a/all-p-onclick.html
+++ b/all-p-onclick.html
@@ -8,7 +8,7 @@
 			var iteamp = document.getElementsByTagName('p');
 			for(var i=0;i<iteamp.length;i++) {
 				iteamp[i].onclick = function() {
-					alert(this.innerHTML);
+					this.style.backgroundColor = '#f00';
 				}
 			}
 		}
